--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is Andrew Chang's Home Page!</h1>
-    <img src="images/BunleaHome.JPG" height="500">
+    <img src="images_mansion pic.JPEG" alt="house">
   </body>
 </html>
