--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is Andrew Chang's Home Page!</h1>
-    <img src="images_mansion pic.JPEG" alt="house">
+    <img src="https://images.mansionglobal.com/im-191825?width=1280" alt="house">
   </body>
 </html>
