--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is Andrew Chang's Home Page!</h1>
-    <img src="mansion.JPEG" alt="house">
+    <img src="mansion.jpg" alt="house">
   </body>
 </html>
