--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <a href="index.html">Home at Last</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
+    <center>
     <h1>This is Andrew Chang's Home Page!</h1>
     <img src="mansion.jpg" alt="house">
+    </center>
   </body>
 </html>
