--- a/aboutme.html
+++ b/aboutme.html
@@ -4,16 +4,13 @@
 	    <meta charset="utf-8">
 	    <title>About Me</title>
 	  </head>
-	  <body bgcolor="#FFB3E6">
+	  <body bgcolor="#00FF00">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
-    <h1>This is all about me!</h1>
+    <h1>I love Chinese food</h1>
     <br>
-    <h1>   and my Granddaughter!</h1>
-    <br>
-    <h1>   and my Nieces!</h1>
-    <br>
+    <img src="chinese food.jpg" alt="chinese food">	  
     </a>
 	  </body>
 	</html>
