--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Home Alone</title>
   </head>
   <body bgcolor="#00008B">
-    <a href="index.html">Home at Last</a>
+    <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <center>
