--- a/aboutme.html
+++ b/aboutme.html
@@ -8,9 +8,11 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
+    <center>
     <h1>I love Chinese food</h1>
     <br>
-    <img src="chinese food.jpg" alt="chinese food">	  
-    </a>
+    <img src="chinese food.jpg" width="500"height="400" alt="chinese food">	  
+    </center>
+	    </a>
 	  </body>
 	</html>
