--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
+    <center>
     <h1>This is my Portfolio Page!</h1>
     <img src="lightbot.jpg" height="250">
     <br>
@@ -26,5 +27,6 @@
     <h1>   Using netlogo do remix of illusions.</h1>
     <h1>   Interactive Fiction Rags to Riches.</h1>
     <br>
+		  </center>
 	  </body>
 	</html>
