--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,11 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <center>
+    <font size= "+2">
     <h1>This is my Portfolio Page!</h1>
+	    </font>
+    <br>
+    <h1>   Lightbot
     <img src="lightbot.jpg" height="250">
     <br>
     <h1>   Second day scratch project.</h1>
