--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,9 @@
     <br>
     <img src="lightbot.jpg" height="250">
     <br>
-    <h1>   Second day scratch project.</h1>
+    <h1>  1.1.9 project
+    <br>
+	<img src="apple tree project final.png" width="600"height="400">
     <br>
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
