--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,8 @@
     <br>
 	<img src="apple tree project final.png" width="900"height="400">
     <br>
+    <h1>   Our apple tree has a cloud that moves in the back and whenever the user clicks the apple, it falls to the ground
+    <br>
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
     <h1>   Interactive Fiction Rags to Riches.</h1>
