--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <br>
 	<img src="apple tree project final.png" width="900"height="400">
     <br>
-    <h1>   Our apple tree has a cloud that moves in the back and whenever the user clicks the apple, it falls to the ground
+    <h2>   Our apple tree has a cloud that moves in the back and whenever the user clicks the apple, it falls to the ground. The backgound has a starry night with different sized stars.
     <br>
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
