--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,11 @@
     <br>
     <h2>   Our apple tree has a cloud that moves in the back and whenever the user clicks the apple, it falls to the ground. The backgound has a starry night with different sized stars.
     <br>
+    <h1>  1.2.5 project- make a game
+    <br>
+	    <img src="crossy road project.png" width="900 height="400
+    <br>
+    <h2> In this game, the goal is to get your person to cross the street without hitting any cars. The cars span across 5 lanes and travel at random speeds. If you reach the box at the top, you get a point and the person resets. If it hits a car, the person resets at the bottom without earning a point.
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
     <h1>   Interactive Fiction Rags to Riches.</h1>
