--- a/portfolio.html
+++ b/portfolio.html
@@ -25,21 +25,21 @@
     <br>
     <h1>  1.2.5 project- make a game
     <br>
-	    <img src="crossy road project.png" width="900 height="400
+	    <img src="crossy road project.png" width="900 height="400>
     <br>
     <h2> In this game, the goal is to get your person to cross the street without hitting any cars. The cars span across 5 lanes and travel at random speeds. If you reach the box at the top, you get a point and the person resets. If it hits a car, the person resets at the bottom without earning a point.
-    <h1>   Using App Inventor to make app game Duck Hunter.</h1>
+    <h1>   
     <br>
-    <h1>   Interactive Fiction Rags to Riches.</h1>
+    <h1>   
     <br>
-    <h1>   Black Jack game written in Python.</h1>
+    <h1>   
     <br>
-    <h1>   Modified bits in pictures.</h1>
+    <h1>   
     <br>
-    <h1>   Use data files to create graphs.</h1>
+    <h1>   
     <br>
-    <h1>   Using netlogo do remix of illusions.</h1>
-    <h1>   Interactive Fiction Rags to Riches.</h1>
+    <h1>   
+    <h1>   
     <br>
     </center>
 	  </body>
