--- a/portfolio.html
+++ b/portfolio.html
@@ -25,14 +25,16 @@
     <br>
     <h1>  1.2.5 project- make a game
     <br>
-	    <img src="crossy road project.png" width="900 height="400>
+	    <img src="crossy road project.png" width="900" height="400">
     <br>
     <h2> In this game, the goal is to get your person to cross the street without hitting any cars. The cars span across 5 lanes and travel at random speeds. If you reach the box at the top, you get a point and the person resets. If it hits a car, the person resets at the bottom without earning a point.
     <h1>   
     <br>
-    <h1>   
+    <h1>   1.3.1 project- PVZ
     <br>
-    <h1>   
+	    <img src="pvz project.png" width="900" height="400">
+   <br>
+    <h2>   In this game, the user controls the peashooter which moves up and down. A random number of zomibes spawn on the screen and the goal is to shoot as many of them as possible in the time given. Press space to shoot a pea and if the pea hits a zombie, you gain a point.
     <br>
     <h1>   
     <br>
