--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,11 @@
    <br>
     <h2>   In this game, the user controls the peashooter which moves up and down. A random number of zomibes spawn on the screen and the goal is to shoot as many of them as possible in the time given. Press space to shoot a pea and if the pea hits a zombie, you gain a point.
     <br>
-    <h1>   
+    <h1>   Scratch project
     <br>
-    <h1>   
+    <img src="scratch project.png" width="900" height="400">
+    <br>
+    <h2>   In this project, you will go on a tour of San Diego with a bunch of trivia questions. You will visit places like Coronado Beach and Petco Park.
     <br>
     <h1>   
     <h1>   
